added reach ui, @reach/dialog

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@reach/dialog": "^0.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
