--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@reach/dialog": "^0.18.0",
+    "@reach/visually-hidden": "^0.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
