--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@reach/dialog": "^0.18.0",
     "@reach/visually-hidden": "^0.18.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
